# gtkmm-application

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ChildClass.cpp  ChildClass.hpp  LICENSE  MainWindow.hpp  README.md  build.py  build.sh  clean.sh  main_test.cpp  warnings.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-debug.yml  cmake-release.yml  cmake.yml  compile.yml
doc/: includeDirsGtkmm-3_0.txt
glade/: MainApplication.glade
src/: MainApplication.cpp  MainApplication.hpp  MainWindow.cpp  MainWindow.hpp
src/BuilderFiles/: MainApplication.xml  MainWindow.xml
test/: CMakeLists.txt
tools/: build.sh  clean.sh  warnings.py
